syntax = "proto3";

package notification.v1;

import "common/v1/common.proto";

option go_package = "github.com/safar/microservices-demo/proto/notification/v1;notificationv1";

// NotificationService handles email notifications
service NotificationService {
  rpc SendOrderConfirmation(SendOrderConfirmationRequest) returns (common.v1.Empty);
  rpc SendShippingUpdate(SendShippingUpdateRequest) returns (common.v1.Empty);
  rpc SendWelcomeEmail(SendWelcomeEmailRequest) returns (common.v1.Empty);
  rpc SendPasswordReset(SendPasswordResetRequest) returns (common.v1.Empty);
}

// OrderItem for email display
message OrderItem {
  string product_name = 1;
  int32 quantity = 2;
  common.v1.Money unit_price = 3;
  common.v1.Money total_price = 4;
}

// SendOrderConfirmationRequest to send order confirmation
message SendOrderConfirmationRequest {
  string email = 1;
  string first_name = 2;
  string order_id = 3;
  repeated OrderItem items = 4;
  common.v1.Money subtotal = 5;
  common.v1.Money shipping = 6;
  common.v1.Money total = 7;
  common.v1.Address shipping_address = 8;
  string tracking_number = 9;
}

// SendShippingUpdateRequest to send shipping status update
message SendShippingUpdateRequest {
  string email = 1;
  string first_name = 2;
  string order_id = 3;
  string tracking_number = 4;
  string carrier = 5;
  string status = 6;
  string location = 7;
}

// SendWelcomeEmailRequest to send welcome email
message SendWelcomeEmailRequest {
  string email = 1;
  string first_name = 2;
}

// SendPasswordResetRequest to send password reset email
message SendPasswordResetRequest {
  string email = 1;
  string reset_token = 2;
}
